src/main/java/com/revolvingmadness/testing/language/interpreter/errors/MaxArgumentError.java
package com.revolvingmadness.testing.language.interpreter.errors;

import com.revolvingmadness.testing.language.errors.Error;

public class MaxArgumentError extends Error {
    public MaxArgumentError(String message) {
        super(message);
    }
}
